# gawauth

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/protos/: google_auth_migrate.proto
src-tauri/src/: config.rs  google_auth_parser.rs  lib.rs  main.rs  storage.rs  totp.rs
src/components/: AppSidebar.tsx  MainHeader.tsx  SearchBar.tsx  TOTPCard.tsx  TOTPList.tsx
src/components/ui/: dropdown-menu.tsx
src/lib/: constants.ts
